--- a/app/src/main/res/layout/fragment_dash_board.xml
+++ b/app/src/main/res/layout/fragment_dash_board.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/off_white"
-        tools:context=".fragments.DashBoardFragment">
+        tools:context=".view.fragments.DashBoardFragment">
 
         <ScrollView
             android:layout_width="match_parent"
