--- a/app/src/main/res/layout/activity_loader.xml
+++ b/app/src/main/res/layout/activity_loader.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/teal"
-    tools:context=".activities.LoaderActivity">
+    tools:context=".view.activities.LoaderActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
