--- a/app/src/main/res/layout/category_spinner.xml
+++ b/app/src/main/res/layout/category_spinner.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/off_white"
-    tools:context=".fragments.ToDoListFragment">
+    tools:context=".view.fragments.ToDoListFragment">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
