--- a/app/src/main/res/layout/content_dash_board.xml
+++ b/app/src/main/res/layout/content_dash_board.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".activities.DashBoardActivity"
+    tools:context=".view.activities.DashBoardActivity"
     tools:showIn="@layout/activity_dash_board">
 
 </RelativeLayout>
