--- a/app/src/main/res/layout/fragment_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_bottom_sheet.xml
@@ -10,7 +10,7 @@
     app:behavior_hideable="true"
     app:behavior_peekHeight="46dp"
     app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
-    tools:context=".fragments.BottomSheetFragment">
+    tools:context=".view.fragments.BottomSheetFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
