--- a/app/src/main/res/layout/fragment_messages.xml
+++ b/app/src/main/res/layout/fragment_messages.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:background="@color/white"
     android:layout_height="match_parent"
-    tools:context=".fragments.MessagesFragment">
+    tools:context=".view.fragments.MessagesFragment">
 
     <RelativeLayout
         android:id="@+id/toolBar"
