--- a/app/src/main/res/layout/fragment_todo_overdue.xml
+++ b/app/src/main/res/layout/fragment_todo_overdue.xml
@@ -11,7 +11,7 @@
         android:layout_height="match_parent"
         android:background="@color/strongWhite"
         android:orientation="vertical"
-        tools:context=".fragments.ToDoListFragment">
+        tools:context=".view.fragments.ToDoListFragment">
 
         <RelativeLayout
             android:layout_width="match_parent"
