--- a/app/src/main/res/layout/tool_bar.xml
+++ b/app/src/main/res/layout/tool_bar.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    tools:context="com.mrbreak.todo.fragments.ToDoListFragment">
+    tools:context=".view.fragments.ToDoListFragment">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
